Added 'Google' title and referenced Google's icon.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <DOCTYPE! html>
 
 <html>
-	
+	<head>
+		Hello world.
+	</head>
+
+	<body>
+		<title>Google</title>
+		<link href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel="shortcut icon">
+	</body>
 </html>
