Added Google Doodle.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 
 <html>
 	<head>
-		Hello world.
+		<title>Google</title>
+		<link href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel="shortcut icon">
 	</head>
 
 	<body>
-		<title>Google</title>
-		<link href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel="shortcut icon">
+
+	 	<img src="https://www.google.com/logos/doodles/2016/charles-macintoshs-250th-birthday-5118142079565824-hp.gif" />
+		
 	</body>
 </html>
