--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 
 	 	<img src="https://www.google.com/logos/doodles/2016/charles-macintoshs-250th-birthday-5118142079565824-hp.gif" />
 		
+		<form>
+			<input type="text">
+			<button>Google Search</button>
+			<button>I'm Feeling Lucky</button>
+		</form>
+
 	</body>
 </html>
