--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 
 	<body>
 
-	 	<img src="https://www.google.com/logos/doodles/2016/charles-macintoshs-250th-birthday-5118142079565824-hp.gif" />
-		
-		<form>
-			<input type="text">
-			<button>Google Search</button>
-			<button>I'm Feeling Lucky</button>
-		</form>
+			<div>
+			<p>
+				<div><a href="#">Gmail</a></div>
+				<div><a href="#">Images</a></div>
+			</p>
+			</div>
+
+			<p>
+	 			<div><img src="https://www.google.com/logos/doodles/2016/charles-macintoshs-250th-birthday-5118142079565824-hp.gif" /></div>
+ 			</p>
+
+ 			<p>
+				<form>
+					<div><input type="text"></div>
+					<div><button>Google Search</button></div>
+					<div><button>I'm Feeling Lucky</button></div>
+				</form>
+			</p>
 
 	</body>
 </html>
